Changing function name from getRandomInt to getComputerChoice for clarity

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     </head>
     <body>
         <script>
-            function getRandomInt(max) {
+            function getComputerChoice(max) {
                 return Math.floor(Math.random() * max)
             }
+
             
+
+
+
 
 
 
