Making changes to getComputerChoice to return a string instead of int

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <body>
         <script>
             function getComputerChoice(max) {
-                return Math.floor(Math.random() * max);
+                let choice = Math.floor(Math.random() * max);
+                if(choice == 0) {
+                    return "rock";
+                } else if(choice == 1) {
+                    return "paper";
+                } else if(choice == 2) {
+                    return "scissors";
+                }
             }
 
             function getPlayerChoice() {
