--- a/index.html
+++ b/index.html
@@ -27,6 +27,38 @@
                 if(playerSelection == "scissors" && computerSelection == "rock") {
                     console.log("You Lose! Paper beats Rock")
                 }
+
+                if(playerSelection == "scissors" && computerSelection == "paper") {
+                    console.log("You win! Scissors beats Paper")
+                }
+
+                if(playerSelection == "scissors" && computerSelection == "scissors") {
+                    console.log("You tied!")
+                }
+
+                if(playerSelection == "rock" && computerSelection == "rock") {
+                    console.log("You tied!")
+                }
+
+                if(playerSelection == "rock" && computerSelection == "paper") {
+                    console.log("You lose! Paper beats Rock")
+                }
+
+                if(playerSelection == "rock" && computerSelection == "scissors") {
+                    console.log("You win! Rock beats Scissors")
+                }
+
+                if(playerSelection == "paper" && computerSelection == "rock") {
+                    console.log("You win! Paper beats Rock")
+                }
+
+                if(playerSelection == "paper" && computerSelection == "paper") {
+                    console.log("You tie!")
+                }
+
+                if(playerSelection == "paper" && computerSelection == "scissors") {
+                    console.log("You lose! Scissors beats paper")
+
             }
 
             
