--- a/index.html
+++ b/index.html
@@ -5,61 +5,66 @@
     </head>
     <body>
         <script>
-            function getComputerChoice(max) {
-                let choice = Math.floor(Math.random() * max);
-                if(choice == 0) {
+            function getComputerChoice() {
+                let choice = Math.floor(Math.random() * 3);
+                if(choice === 0) {
                     return "rock";
-                } else if(choice == 1) {
+                } else if(choice === 1) {
                     return "paper";
-                } else if(choice == 2) {
+                } else if(choice === 2) {
                     return "scissors";
                 }
             }
 
             function getPlayerChoice() {
                 let choice = prompt("Enter a move (rock, paper, or scissors): ");
-                choice = choice.toLowerCase;
+                choice = choice.toLowerCase();
                 return choice;
             }
 
             function play(playerSelection, computerSelection) {
                 
                 if(playerSelection == "scissors" && computerSelection == "rock") {
-                    console.log("You Lose! Paper beats Rock")
+                    return "You Lose! Paper beats Rock";
                 }
 
                 if(playerSelection == "scissors" && computerSelection == "paper") {
-                    console.log("You win! Scissors beats Paper")
+                    return "You win! Scissors beats Paper";
                 }
 
                 if(playerSelection == "scissors" && computerSelection == "scissors") {
-                    console.log("You tied!")
+                    return "You tied!"
                 }
 
                 if(playerSelection == "rock" && computerSelection == "rock") {
-                    console.log("You tied!")
+                    return "You tied!"
                 }
 
                 if(playerSelection == "rock" && computerSelection == "paper") {
-                    console.log("You lose! Paper beats Rock")
+                    return ("You lose! Paper beats Rock")
                 }
 
                 if(playerSelection == "rock" && computerSelection == "scissors") {
-                    console.log("You win! Rock beats Scissors")
+                    return ("You win! Rock beats Scissors")
                 }
 
                 if(playerSelection == "paper" && computerSelection == "rock") {
-                    console.log("You win! Paper beats Rock")
+                    return ("You win! Paper beats Rock")
                 }
 
                 if(playerSelection == "paper" && computerSelection == "paper") {
-                    console.log("You tie!")
+                    return("You tie!")
                 }
 
                 if(playerSelection == "paper" && computerSelection == "scissors") {
-                    console.log("You lose! Scissors beats paper")
+                    return("You lose! Scissors beats paper")
+                }
 
             }
+
+            const playerSelection = getPlayerChoice();
+            const computerSelection = getComputerChoice();
+            console.log(play(playerSelection, computerSelection));
 
             
 
