--- a/index.html
+++ b/index.html
@@ -62,9 +62,18 @@
 
             }
 
-            const playerSelection = getPlayerChoice();
-            const computerSelection = getComputerChoice();
-            console.log(play(playerSelection, computerSelection));
+            function game() {
+                for(let i = 0; i < 5; i++) {
+                    alert("Game " + (i+1))
+                    const playerSelection = getPlayerChoice();
+                    const computerSelection = getComputerChoice();
+                    console.log(play(playerSelection, computerSelection));
+                }
+            }
+
+            game();
+
+            
 
             
 
