some more changes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
     <head>
         <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
+        <h1 class="header">Let's Play Rock Paper Scissors</h1>
+
+        <div class="buttons">
+            <button class="rock-button">Rock</button>
+            <button class="paper-button">Paper</button>
+            <button class="scissors-button">Scissors</button>
+        </div>
+
+        <div class="scoretable">
+            <table>
+                <tr>
+                    <th>You</th>
+                    <th>Computer</th>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+
         <script src="./index.js"></script>
-        <script>game();</script>
+        <script></script>
     </body>
 </html>
