--- a/index.html
+++ b/index.html
@@ -13,16 +13,8 @@
             <button class="scissors-button">Scissors</button>
         </div>
 
-        <div class="scoretable">
-            <table>
-                <tr>
-                    <th>You</th>
-                    <th>Computer</th>
-                </tr>
-                <tr>
-                    <td></td>
-                </tr>
-            </table>
+        <div id="score">
+            
         </div>
 
         <script src="./index.js"></script>
